tests/negative/req07/undeclared_effect_read_line.mvl
// corpus:expect-fail
// expect-requirement: 7
// Scenario: function calls read_line but does not declare ! Console in its signature.
// Triggers: CheckError::UndeclaredEffect (req7)

use std.io.{stdin, read_line, IoError}
fn read_input() -> Result[Tainted[String], IoError] {
    // BUG: `read_line` requires `! Console` but the signature declares no effects.
    read_line(stdin())
}

fn main() -> Unit ! Console {
    let _: Result[Tainted[String], IoError] = read_input();
}
